[package]
name = "glacio-bin"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]

[dependencies]
docopt = "0.8"
env_logger = "0.4"
glacio = { path = "../glacio" }
glacio-http = { path = "../glacio-http" }
iron = "0.5"
serde = "1.0"
serde_derive = "1.0"

[[bin]]
name = "glacio"
path = "src/main.rs"
doc = false
test = false
