[package]
name = "glacio-bin"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]

[dependencies]
clap = { version = "2.27", features = ["yaml"] }
env_logger = "0.4"
glacio = { path = "../glacio" }
glacio-http = { path = "../glacio-http" }
iron = "0.5"
serde_json = "1.0"

[[bin]]
name = "glacio"
path = "src/main.rs"
doc = false
test = false
