[package]
name = "glacio-http"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]

[dependencies]
chrono = "0.4"
glacio = { path = "../glacio" }
iron = "0.5"
logger = "0.3"
params = "0.6"
percent-encoding = "1.0"
router = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"

[dev-dependencies]
iron-test = "0.5"
